cabal-version:      3.0
name:               tornadano-deposit
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             stanislav-az
maintainer:         st.zhdanovich@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    default-extensions:
      NoStarIsType
      BangPatterns
      BlockArguments
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      GADTSyntax
      GeneralisedNewtypeDeriving
      NoImplicitPrelude
      KindSignatures
      LambdaCase
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Ext.PlutusTx.List
      Ext.PlutusTx.Numeric
      Ext.PlutusTx.Builtins
      Ext.Plutus.V2.Ledger.Contexts
      Service.MerkleTree
      Service.ProtocolToken
      Mixer.Datum
      Mixer.Script
      Mixer.Script.Core
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      cardano-node-emulator -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      plutus-use-cases,
      cardano-api,
      serialise,
      plutonomy,
    hs-source-dirs: src

executable dump-script
  import: lang
  main-is: Main.hs
  other-modules:
    Options
  hs-source-dirs: dump-script
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.9 && < 5,
    text,
    aeson,
    optparse-applicative,
    bytestring,
    base16-bytestring,
    plutus-ledger-api,
    plutus-ledger,
    plutus-core,
    cardano-ledger-alonzo,
    cardano-api,
    tornadano-deposit,
    serialise,

executable dump-policy
  import: lang
  main-is: Main.hs
  other-modules:
    Options
  hs-source-dirs: dump-policy
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.9 && < 5,
    text,
    aeson,
    optparse-applicative,
    bytestring,
    plutus-ledger-api,
    plutus-ledger,
    plutus-core,
    cardano-ledger-alonzo,
    cardano-api,
    tornadano-deposit,
